# xCOLUMNs

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  correlations.ipynb  eriks-plots.ipynb  gather_results.py  generate_highlight.py  generate_logo.py  mixed-plots.ipynb  process_results_bca.py  pyproject.toml  quick_usage_guide.ipynb  requirements.txt  run_all_bca.sh  setup.py  short_usage_guide.ipynb
.github/workflows/: pre-commit.yml  pypi-upload.yml
columns/: block_coordinate.py  find_classifier_frank_wolfe.py  metrics.py  numba_csr_methods.py  online_block_coordinate.py  utils.py  utils_dense.py  utils_misc.py  utils_sparse.py  weighted_prediction.py
docs/: README.md  conf.py  index.md
docs/_static/: generate_logo.py
docs/api/: block_coordinate.md  confusion_matrix.md  frank_wolfe.md  metrics.md  weighted_prediction.md
docs/intro/: overview.md  quick_start.md
experiments/: .gitignore  README.md  create_all_online_datasets.sh  create_all_online_torch_datasets.sh  create_all_sklearn_datasets.sh  create_online_dataset.py  create_online_torch_dataset.py  create_sklearn_dataset.py  custom_utilities_methods.py  data.py  extract_bf_star_weights.py  generate_highlight.py  main_bc.py  main_bca.py  main_frank_wolfe.py  metrics_original.py  numba_perf_tests.sh  nxc_predict_bf_star.sh  nxc_train_and_predict.sh  omma_custom_utilities_methods.py  omma_wrappers_frank_wolfe.py  omma_wrappers_online_methods.py  omma_wrappers_threshold_methods.py  process_results_bca.py  requirements.txt  run_all_bc_experiments.sh  run_all_iclr_2024_fw_experiments.sh  run_all_iclr_fw_experiments.sh  run_all_icml_2024_omma_experiments.sh  run_all_neurips_2023_bc_experiments.sh  run_all_nxc_train_and_predict.sh  run_all_online.sh  run_all_thesis_2024_experiments.sh  run_all_thesis_2024_experiments_bf_star.sh  run_all_thesis_2024_experiments_org.sh  run_all_thesis_2024_experiments_syn.sh  run_all_thesis_2024_experiments_syn_sample.sh  run_all_thesis_2024_experiments_top_labels.sh  run_bc_experiment.py  run_iclr_2024_fw_experiment.py  (+15 more)
experiments/notebooks/: example_continutes.ipynb  example_pu_discrete.ipynb  lightxml_output_loading_test.ipynb  metrics_comparison.ipynb  plot_mixed_objective.ipynb  plot_omma_reg_difference.ipynb  tests.ipynb  (+3 more)
notebooks/: data_loading_test.ipynb  example_continutes.ipynb  example_discrete copy.ipynb  plot_mixed_objective.ipynb
src/: bca_prediction.py  data.py  default_types.py  etu_pu.py  expected_frank_wolfe.py  find_classifier_frank_wolfe.py  frank_wolfe.py  main.py  main_bca.py  main_frank_wolfe.py  metrics.py  paper-lightxml.py  prediction.py  prediction_dense.py  prediction_sparse.py  prediction_utils.py  sparse_prediction.py  utils.py  utils_dense.py  utils_misc.py  utils_sparse.py  weighted_prediction.py
tests/: conftest.py  test_block_coordinate.py  test_frank_wolfe.py  test_metrics.py  test_weighted_prediction.py
xcolumns/: block_coordinate.py  confusion_matrix.py  default_types.py  find_classifier_frank_wolfe.py  frank_wolfe.py  metrics.py  metrics_objects.py  metrics_on_conf_matrix.py  metrics_original.py  numba_csr_functions.py  numba_csr_methods.py  online_block_coordinate.py  types.py  utils.py  weighted_prediction.py
(+17 files in other folders)
